# cirrus-kv

./: .gitignore  .gitmodules  .travis.yml  CPPLINT.cfg  Doxyfile  License.md  Makefile.am  README.md  TCPBladeMessage_generated.h  addtl_documentation.dox  bootstrap.sh  common.mk  configure.ac
benchmarks/: .gitignore  1_1  1_1.cpp  1_2  1_2.cpp  1_3  1_3.cpp  Makefile.am  README.md  boost_external_mem.cpp  cache_benchmark.cpp  cache_iops.cpp  cache_latency.cpp  exhaustion  iterator_benchmark.cpp  iterator_v2.cpp  mem_exhaustion.cpp  outstanding_requests.cpp  remove_bulk  remove_bulk.cpp  run_benchmarks.py  store_bandwidth.cpp  store_latency.cpp  throughput  throughput.cpp
examples/: Makefile.am  run_examples.py  wordcount.cpp  wordcountpar.cpp
examples/graph/: Input.cpp  Makefile.am  PageRank.cpp  PageRank.h  Vertex.cpp  Vertex.h  pr.cpp
examples/graphs/: Makefile.am
examples/k_cores/: KCores.cpp  KCores.h  Vertex.cpp  Vertex.h
examples/log_reg/: Makefile.am  adult.data  log_reg.cpp  preprocess.py  run.sh
examples/ml/: '  .PSSparseServerInterface.cpp.swp  .gitignore  Checksum.cpp  Checksum.h  CircularBuffer.h  Configuration.cpp  Configuration.h  Constants.h  CriteoCsvToLibSVM.cpp  Dataset.cpp  Dataset.h  ErrorSparseTask.cpp  ErrorSparseTask.cpp.orig  ErrorTask.cpp  Input.cpp  Input.h  InputReader.cpp  InputReader.h  LRModel.cpp  LRModel.h  LoadingNetflixTask.cpp  LoadingSparseTaskS3.cpp  LoadingTask.cpp  LoadingTaskS3.cpp  LogisticSparseTaskS3.cpp  LogisticSparseTaskS3.cpp.orig  LogisticTask.cpp  LogisticTaskS3.cpp  MFModel.cpp  MFModel.h  MFNetflixTask.cpp  Makefile.am  Matrix.cpp  Matrix.h  MlUtils.cpp  MlUtils.h  Model.cpp  Model.h  ModelGradient.cpp  (+58 more)
examples/mnist_caffe/: README.md  Serializers.h  download_dataset.sh  loader.cpp  model.prototxt  read_mnist.cpp  read_mnist.h  solver.prototxt  train.cpp
examples/sort/: Makefile.am  generate_data.sh  loader.cpp  sorter.cpp
examples/sssp/: Vertex.cpp  Vertex.h
examples/terasort/: Makefile  baseline.cpp  config.cpp  config.hpp  hash_input.cpp  hash_input.hpp  hash_lambda.cpp  hash_lambda.hpp  hash_output.cpp  hash_output.hpp  main.cpp  record.cpp  record.hpp  sort_input.cpp  sort_input.hpp  sort_lambda.cpp  sort_lambda.hpp  terasort_gen.py
examples/terasort_lambda/: S3.cpp  S3.hpp  credentials.hpp  meta_config.hpp  terasort_gen.py
examples/terasort_mp/: Makefile  config_instance.hpp  hash_lambda.cpp  hash_lambda.hpp  main.cpp  read_lambda.cpp  read_lambda.hpp  serialization.cpp  serialization.hpp  sort_lambda.cpp  sort_lambda.hpp
src/cache_manager/: CacheManager.cpp  CacheManager.h  EvictionPolicy.cpp  EvictionPolicy.h  LRAddedEvictionPolicy.cpp  LRAddedEvictionPolicy.h  LRUEvictionPolicy.cpp  LRUEvictionPolicy.h  Makefile.am  PrefetchPolicy.h  cache_manager.cpp
src/client/: .gitignore  AuthenticationClient.cpp  AuthenticationClient.h  BladeClient.cpp  BladeClient.h  BladeFileClient.cpp  BladeFileClient.h  DataPointer.h  Makefile.am  RDMAClient.cpp  RDMAClient.h  RDMAClientmain.cpp  TCPClient.cpp  TCPClient.h  TCPClient.h.gch  TCPClientMain.cpp  clientmain.cpp  fileclientmain  fileclientmain.cpp  main.cpp  newBladeClient.h  old_RDMAClient.h  scalability_main.cpp
src/common/: AllocationRecord.h  AllocatorMessage.h  AllocatorMessageGenerator.cpp  AllocatorMessageGenerator.h  BladeFileMessage.h  BladeFileMessageGenerator.cpp  BladeFileMessageGenerator.h  BladeMessage.h  BladeMessageGenerator.cpp  BladeMessageGenerator.h  BladeObjectStoreMessageGenerator.cpp  BladeObjectStoreMessageGenerator.h  Decls.h  Exception.h  FileAllocationRecord.h  Future.cpp  Future.h  Makefile.am  Semaphore.h  Serializer.h  Synchronization.cpp  Synchronization.h  ThreadPinning.h  config.h
src/coordinator/: Coordinator.cpp  Coordinator.h  CoordinatorMain.cpp  Makefile.am
src/iterator/: CirrusIterable.h  Iterator.cpp  Iterator.h  IteratorPolicy.h  Makefile.am  iterator.cpp  iterator.h
src/object_store/: CacheStore.cpp  CacheStore.h  EvictionPolicy.cpp  EvictionPolicy.h  FullBladeObjectStore.cpp  FullBladeObjectStore.h  FullCacheStore.cpp  FullCacheStore.h  LRUEvictionPolicy.cpp  LRUEvictionPolicy.h  Makefile.am  ObjectStore.cpp  ObjectStore.h  RDMAObjectStore.cpp  RDMAObjectStore.h  RandomEvictionPolicy.cpp  RandomEvictionPolicy.h  object_store_internal.h
src/server/: .gitignore  Allocation.h  AllocatorMessage.h  ApplicationQuota.h  ApplicationRecord.cpp  ApplicationRecord.h  BackendMap.h  BladeAllocServer.cpp  BladeAllocServer.h  BladeFileAllocServer.cpp  BladeFileAllocServer.h  BladeObjectStore.cpp  BladeObjectStore.h  BladePoolServer.cpp  BladePoolServer.h  BladeServer.cpp  BladeServer.h  ConnectionContext.cpp  ConnectionContext.h  ConnectionInfo.h  DumbQuotaManager.cpp  DumbQuotaManager.h  EPollServer.cpp  EPollServer.h  EPollTCPServer.cpp  EPollTCPServer.h  GeneralContext.h  Makefile.am  MemSlice.h  MemoryBackend.cpp  MemoryBackend.h  NVStorageBackend.cpp  NVStorageBackend.h  QuotaManager.h  RDMAServer.cpp  RDMAServer.h  ResourceAllocator.cpp  ResourceAllocator.h  Server.h  StorageBackend.h  (+14 more)
src/test/: Makefile.am  test_fullblade_store.cpp  test_mt.cpp  test_mult_clients.cpp
tests/client/: .gitignore  Makefile.am  RDMAClientmain.cpp  TCPClientMain.cpp
tests/ml/: Checksum.cpp  Checksum.h  Configuration.cpp  Configuration.h  Dataset.cpp  Dataset.h  Input.cpp  LRModel.cpp  LRModel.h  Makefile.am  Matrix.cpp  Matrix.h  MlUtils.cpp  Model.h  ModelGradient.cpp  ModelGradient.h  Serializers.cpp  Serializers.h  SoftmaxModel.cpp  SoftmaxModel.h  Tasks.cpp  Tasks.h  Utils.h  bug_regression.cpp  parameter_server.cpp  run.sh  two_clients_test.cpp
tests/mpi/: .gitignore  Makefile.am  configure.ac  configure.gnu  run.sh  test_mpi  test_mpi.cpp  test_multi_tasks.cpp
tests/object_store/: .gitignore  Makefile.am  mem_exhaustion.cpp  object_store_internal.h  object_store_internal.h.gch  test_cache_manager.cpp  test_fullblade_store.cpp  test_iterator  test_iterator.cpp  test_mt.cpp  test_mult_clients.cpp  test_shards.cpp  test_store_bulk.cpp  test_store_v2.cpp
tests/raw/: Makefile.am  test_atomics  test_atomics.cpp
(+226 files in other folders)
